Updated map centre location coordinates

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,32 +4,14 @@
   padding: 0px;
 }
 body {
-  background: rgb(18, 181, 231);
 }
 .container {
   overflow: hidden;
   text-align: center;
-  background: -moz-linear-gradient(
-    top,
-    rgba(169, 228, 247, 1) 0%,
-    rgba(15, 180, 231, 1) 100%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    rgba(169, 228, 247, 1) 0%,
-    rgba(15, 180, 231, 1) 100%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    rgba(169, 228, 247, 1) 0%,
-    rgba(15, 180, 231, 1) 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a9e4f7', endColorstr='#0fb4e7',GradientType=0 ); /* IE6-9 */
 }
 h1 {
   font-family: "Ubuntu", sans-serif;
-  color: rgba(255, 255, 255, 0.65);
-  font-size: 120px;
+  font-size: 80px;
   margin: 20px 0px;
   font-weight: 100;
 }
@@ -38,9 +20,10 @@ h1 {
     font-size: 48px;
   }
   #map {
-    width: 100%;
+    text-align: center !important;
     margin-top: 25px !important;
   }
+
   .title ul li {
     padding: 8px 0px !important;
   }
@@ -55,14 +38,13 @@ h1 {
   list-style: none;
   font-family: "Ubuntu", sans-serif;
   display: inline-block;
-  border: #fff solid 2px;
+
   border-radius: 50px;
   padding: 10px 0px;
   margin: 5px;
 }
 li a {
   text-decoration: none;
-  color: #fff;
   -webkit-transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   -moz-transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   -o-transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
@@ -70,11 +52,20 @@ li a {
   padding: 10px 20px;
 }
 li a:hover {
-  background: #fff;
-  color: #1db8e8;
   border-radius: 50px;
 }
 
 #map {
-  margin-top: 40px;
+  display: block;
+  margin: 0 auto !important;
+  margin-right: 0;
+  width: 100%;
+}
+.marker {
+  background-image: url("img/mapbox-icon.png");
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
 }
